deployments/traefik/traefik-dashboard-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: traefik-basicauth
    #  namespace: traefik
spec:
    basicAuth:
        secret: traefik-dashboard-auth
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1rr569v9jm7ck70q4wpnspfhdvt4y5m6s604tx0ygs0a65qkt7g4qdszk6k
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpc1d1Rkl0bWNrL1BMM1VV
[...]
            fnkJ0JSwDHVgskAyuVpusawtIRGGSr9jXSZgD0jTkpAXM5fj7c0YGw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2022-07-04T21:22:14Z"
    mac: ENC[AES256_GCM,data:+MmMGnAJAE6djiU3xCJxT8dtFl3x2Hs5FW7s1ABXCTOEH154Zba3rl6qu1jlEdhtKyvZ3IYVWI7fv3+ZZ+362LIsrsOAIjNKVctxilapzpNoSdJCmc0EQd2qGhjTrXNkIUfp5h/UQQspfNgpJXm2+HiiiuIN9oaMtSFvyOM/s0E=,iv:Sx3Wj0lTeJ0S4iSBjlucZdQ3/IAvxIU/d91k7VULMSU=,tag:Bt+7CtisY+So4VgGMORsxQ==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData)$
    version: 3.7.1
